--- a/style.css
+++ b/style.css
@@ -187,6 +187,10 @@ section {
   text-align: center;
 }
 
+.read:hover{
+  cursor: pointer;
+}
+
 .add-to-favorite {
   width: 20%;
   text-align: center;
