--- a/style.css
+++ b/style.css
@@ -115,6 +115,11 @@ section {
   border-radius: 16px;
 }
 
+.article-context article input {
+  width: 100%;
+  height: 200px;
+}
+
 .article-title {
   margin-top: 0;
 }
