新增首頁搜尋欄

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -80,6 +80,10 @@ nav {
   font-size: 26px;
 }
 
+.search-btn button:hover {
+  cursor: pointer;
+}
+
 .menu {
   height: 100%;
   aspect-ratio: 1/1;
