--- a/src/css/style.css
+++ b/src/css/style.css
@@ -63,24 +63,10 @@ nav {
 }
 
 .search-btn {
-  min-width: 100px;
-  width: 10%;
-  height: 100%;
-  display: flex;
-  align-items: center;
+  margin-left: 10px;
 }
 
-.search-btn button {
-  width: 100%;
-  height: 80%;
-  border-radius: 10px;
-  border: 2px solid #2d3142;
-  background-color: #c32f27;
-  margin: 0 6px;
-  font-size: 26px;
-}
-
-.search-btn button:hover {
+.search-btn:hover {
   cursor: pointer;
 }
 
@@ -206,7 +192,7 @@ section {
   text-align: center;
 }
 
-.read:hover{
+.read:hover {
   cursor: pointer;
 }
 
