--- a/src/css/style.css
+++ b/src/css/style.css
@@ -56,17 +56,17 @@ nav {
   align-items: center;
 }
 
-.search-input {
+#search-input {
   width: 100%;
   height: 80%;
   font-size: 20px;
 }
 
-.search-btn {
+#search-btn {
   margin-left: 10px;
 }
 
-.search-btn:hover {
+#search-btn:hover {
   cursor: pointer;
 }
 
