style: 調整 index 頁面 class = read-favorite 排版設定

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -198,9 +198,16 @@ section {
 
 .add-to-favorite {
   width: 20%;
-  text-align: center;
 }
 
+.edit {
+  width: 20%;
+  margin-right: 10px;
+}
+
+.edit:hover {
+  cursor: pointer;
+}
 /* .add-to-favorite-btn {
 
 } */
