--- a/src/css/c-style.css
+++ b/src/css/c-style.css
@@ -1,5 +1,5 @@
 .c-border{
-    border: 1px solid black;
+    border: 1px solid rgba(0, 0, 0, 1);
 }
 
 /****************************************************************************************************
