--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,7 +2,7 @@
   --header-footer-height: 60px;
   --nav-paginator-height: 45px;
   --main-padding: 20px;
-  --articles-gap: 10px;
+  --articles-gap: 5px;
   --article-height: 90px;
 
   --body-background-color: rgb(239, 236, 204);
@@ -86,8 +86,9 @@ main {
   position: relative;
 }
 
-section {
-  width: 100%;
+#article-container {
+  margin: 0 auto;
+  width: 60%;
   height: 100%;
   position: relative;
 }
@@ -110,7 +111,7 @@ section {
 .article {
   height: var(--article-height);
   padding: 3px 0;
-  margin-bottom: var(--articles-gap);
+  margin: var(--articles-gap) 0;
   border-radius: 16px;
   background-color: var(--article-background-color);
   display: flex;
