--- a/src/css/style.css
+++ b/src/css/style.css
@@ -105,7 +105,7 @@ section {
   border-radius: 16px;
 }
 
-.article-context article input {
+.article-context article textarea {
   width: 100%;
   height: 200px;
 }
