--- a/src/css/style.css
+++ b/src/css/style.css
@@ -83,6 +83,8 @@ nav {
 main {
   height: 100%;
   padding: var(--main-padding);
+  /* 使新增文章篇數渲染過程明顯 */
+  padding-bottom: 100px;
   position: relative;
   margin-top: var(--header-footer-height);
 }
