feat: 新增欄位說明文字

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -94,9 +94,9 @@ main {
   position: relative;
 }
 
-.article-cetegory {
+.article-category {
   margin: 5px 0px;
-  width: 228.13px;
+  width: 175px;
   text-align: center;
 }
 
