--- a/src/css/style.css
+++ b/src/css/style.css
@@ -429,11 +429,18 @@ footer {
   border-radius: 10px 10px;
 }
 
+.list-profile-container {
+  display: flex;
+  margin: 0 0 0 10px;
+  cursor: pointer;
+}
+
 .profile-picture {
   display: flex;
   margin: 0 0 0 10px;
   cursor: pointer;
 }
+
 .profile-picture a {
   display: flex;
 }
@@ -443,12 +450,14 @@ footer {
   justify-content: flex-end;
   margin: 10px 0 0 0;
 }
+
 #update-btn,
 #cancel-btn {
   font-size: 20px;
   font-weight: bold;
   margin: 0 5px;
 }
+
 #user-id,
 #user-name,
 #email,
@@ -470,6 +479,7 @@ footer {
   height: 200px;
   margin: 20px;
 }
+
 #profile-img img {
   width: 100%;
   height: 100%;
@@ -481,6 +491,7 @@ footer {
   margin: 0 0 0 10px;
   cursor: pointer;
 }
+
 .profile-picture a {
   display: flex;
 }
