--- a/src/css/style.css
+++ b/src/css/style.css
@@ -499,3 +499,10 @@ footer {
 #editButton {
   margin-left: auto;
 }
+
+.user-list-container {
+  margin: 50px auto 0px;
+  width: 80%;
+  text-align: center;
+  border: 2px solid tomato;
+}
