--- a/src/css/style.css
+++ b/src/css/style.css
@@ -505,4 +505,30 @@ footer {
   width: 80%;
   text-align: center;
   border: 2px solid tomato;
+  display: flex;
+  flex-direction: column;
+}
+
+.user-container {
+  display: flex;
+  flex-direction: row;
+  margin: 10px;
+  padding: 5px;
+  border: 2px solid seagreen;
+}
+
+.user-image {
+  display: flex;
+  height: 50px;
+  margin: 5px;
+}
+
+.user-name {
+  font-size: larger;
+}
+
+.follow-btn {
+  display: flex;
+  margin-left: auto;
+  ;
 }
