新增用戶列表按鈕圖案

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -517,6 +517,11 @@ footer {
   border: 2px solid seagreen;
 }
 
+.user-list {
+  display: flex;
+  align-items: center;
+}
+
 .user-image {
   display: flex;
   height: 50px;
