新增follow按鈕切換樣式

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -535,5 +535,10 @@ footer {
 .follow-btn {
   display: flex;
   margin-left: auto;
-  ;
+  background-color: #507ad5;
+  align-items: center;
+}
+
+.followed {
+  background-color: #777777a3;
 }
