--- a/src/css/style.css
+++ b/src/css/style.css
@@ -475,7 +475,6 @@ footer {
   height: 100%;
 }
 
-
 .profile-picture {
   display: flex;
   margin: 0 0 0 10px;
@@ -487,4 +486,41 @@ footer {
 
 #editButton {
   margin-left: auto;
+}
+
+#loginErrorMsg {
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
+  color: red;
+}
+
+#loginH2 {
+  text-align: center;
+}
+#loginH3 {
+  margin: 20px;
+  text-align: center;
+}
+
+#loginMain {
+  display: flex;
+  justify-content: center;
+}
+
+#loginForm {
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+  font-weight: bold;
+  width: 300px;
+}
+
+#loginForm input,
+label {
+  margin: 5px;
+}
+#loginForm button {
+  margin: 10px;
+  align-self: center;
 }
