--- a/src/css/style.css
+++ b/src/css/style.css
@@ -68,7 +68,6 @@ nav {
 
 #search-input {
   width: 100%;
-  height: 80%;
   font-size: 20px;
 }
 
@@ -87,6 +86,11 @@ main {
   padding-bottom: 100px;
   position: relative;
   margin-top: var(--header-footer-height);
+}
+
+#createButton {
+  position: absolute;
+  right: 10px;
 }
 
 #article-container {
