--- a/articlecamp-front/src/components/Header.module.css
+++ b/articlecamp-front/src/components/Header.module.css
@@ -1,3 +1,31 @@
+#header {
+  width: 100%;
+  height: 60px;
+  background-color: #DAF7A6;
+  /* position: fixed; */
+  /* top: 0px; */
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#nav {
+  width: 100%;
+  height: 60px;
+  margin: 0 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+/* #navbar{
+  background-color: #DAF7A6;
+  width: 100vw;
+  height: 10vh;
+  display: flex;
+  justify-content: space-between;
+} */
+
 .logo {
   height: 100%;
   /* 設置元素的寬高比 */
@@ -5,17 +33,20 @@
 }
 
 .icons {
+  height: 100%;
   display: flex;
   margin: 0 0 0 10px;
   cursor: pointer;
 }
 
 .user-list {
+  height: 100%;
   display: flex;
   align-items: center;
 }
 
 .profile {
+  height: 100%;
   display: flex;
   margin: 0 0 0 10px;
   cursor: pointer;
