feat: 將標題與圖片套用垂直置中的布局

--- a/react/src/pages/common.module.css
+++ b/react/src/pages/common.module.css
@@ -1,11 +1,13 @@
 .container{
   margin: 0 auto;
-  width: 60%;
+  width: 62.5%;
   height: 100%;
 }
 
-.horizonCenter{
-  margin: 0 auto;
+.horizon-center-layout{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 /* 垂直置中布局 */
