--- a/react/src/pages/LoginRegisterPage/styles.module.css
+++ b/react/src/pages/LoginRegisterPage/styles.module.css
@@ -1,8 +1,5 @@
 .container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
