--- a/react/src/components/header.module.css
+++ b/react/src/components/header.module.css
@@ -1,7 +1,7 @@
 #header {
   width: 100%;
   height: 60px;
-  background-color: #DAF7A6;
+  background-color: #daf7a6;
   /* position: fixed; */
   /* top: 0px; */
   z-index: 1;
@@ -12,7 +12,7 @@
 
 #nav {
   width: 100%;
-  height: 60px;
+  height: 80%;
   margin: 0 20px;
   display: flex;
   justify-content: space-between;
@@ -31,7 +31,7 @@
   cursor: pointer;
 }
 
-.user-list {
+.userList {
   height: 100%;
   display: flex;
   align-items: center;
