--- a/react/src/pages/common.module.css
+++ b/react/src/pages/common.module.css
@@ -1,3 +1,13 @@
+* {
+  box-sizing: border-box;
+  font-family: 'Lato', 'Noto Sans TC', sans-serif;
+}
+
+body {
+  margin: 0;
+  background-color: rgb(239, 236, 204);
+}
+
 .container{
   margin: 0 auto;
   width: 62.5%;
