login register page串接api取得token

--- a/react/src/pages/LoginRegisterPage/styles.module.css
+++ b/react/src/pages/LoginRegisterPage/styles.module.css
@@ -28,3 +28,14 @@
   color: rgb(68, 68, 250);
   cursor: pointer;
 }
+
+.label {
+  display: block;
+}
+
+.message {
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
+  color: red;
+}
