feat: ProfilePage 的樣式表與 props 修改為 React 版本

--- a/react/src/pages/page.module.css
+++ b/react/src/pages/page.module.css
@@ -21,6 +21,13 @@
     border: 1px solid rgba(0, 0, 0, 1);
 }
 
+/* 右下方取消或送出請求的按鈕 */
+.applyBtns {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
 /****************************************************************************************************
 Flexbox 佈局 justify-content 控制了 flex 子元素在主軸上的對齊方式  
 ****************************************************************************************************/
