--- a/react/src/pages/ArticlePage/styles.module.css
+++ b/react/src/pages/ArticlePage/styles.module.css
@@ -1,17 +1,3 @@
-/* TODO: 不要使用 position: absolute; 理由週五所說，且按鈕定位應在文章區塊的右下方 */
-#editBtn {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-}
-
-/* TODO: 複用 page.module.css 的 container 樣式表 */
-#container {
-  margin: 0 auto;
-  width: 60%;
-  height: auto;
-  position: relative;
-}
 .content {
   margin-top: 15px;
   padding: 15px;
@@ -25,6 +11,7 @@
 }
 
 .context article{
+  margin-bottom: 10px;
   width: 100%;
   height: auto;
   white-space: pre-wrap; 
@@ -33,8 +20,7 @@
 }
 
 #commentsContainer {
-  margin: 0 auto;
-  margin-top: 50px;
+  margin: 50px auto 0;
   position: relative;
   border: 3px solid rgb(227, 155, 143);
   border-radius: 10px 10px;
@@ -77,6 +63,7 @@
   margin: 20px auto;
   flex-direction: column;
   background-color: rgb(222, 173, 125);
+  height: auto;
   width: 60%;
   padding: 20px 10px;
   border-radius: 10px 10px;
